--- a/Site/GymLife.css
+++ b/Site/GymLife.css
@@ -1,3 +1,4 @@
+
 body {
     margin: 0;
     background-color: #a6a2a2;
@@ -46,6 +47,11 @@ body {
     font-size: medium;
    
 
+}
+
+a {
+    color: antiquewhite;
+    text-decoration: none;
 }
 
 /* MENU LISTA */
