--- a/Site/GymLife.css
+++ b/Site/GymLife.css
@@ -1,7 +1,7 @@
 
 body {
     margin: 0;
-    background-color: #a6a2a2;
+    background-color: #000000;
 
     /* overflow-x: hidden; */
     /* overflow-y: hidden; */
@@ -11,15 +11,12 @@ body {
 /* HEADER */
 .header {
     position: fixed;
-    background-color: black;
     display: flex;
     justify-content: space-around;
     align-items: center;
     top: 0;
     width: 100%;
     height: 80px;
-
-    /* z-index: 999; */
 
 }
 
@@ -50,7 +47,7 @@ body {
 }
 
 a {
-    color: antiquewhite;
+    color: #d4c8c8;
     text-decoration: none;
 }
 
@@ -70,7 +67,7 @@ li:hover {
     object-fit: cover;
     opacity: .8;
     margin-top: 80px;
-    
+    position: fixed;
     
 }
 
