--- a/Site/cadastro.css
+++ b/Site/cadastro.css
@@ -24,8 +24,6 @@ body {
 .header img {
     height: 145px;
     margin-top: 3%;
-    
-    
 }
 
 /* MENU */
@@ -61,7 +59,7 @@ li:hover {
     height: 100vh;
     object-fit: cover;
     /* margin-top: 80px;  */
-    position: absolute;
+    /* position: absolute; */
 
 }
 
