--- a/Site/cadastro.css
+++ b/Site/cadastro.css
@@ -24,31 +24,10 @@ body {
 .header img {
     height: 145px;
     margin-top: 3%;
-}
-
-/* MENU */
-.header .container ul {
-    width: 600px;
-    list-style: none;
-    display: flex;
-    justify-content: space-evenly;
-    color: #d4c8c8;
-    font-size: medium;
    
-
-}
-
-a {
-    color: #d4c8c8;
-    text-decoration: none;
-}
-
-/* MENU LISTA */
-li:hover {
-    color: #b23a48;
-    cursor: pointer;
     
 }
+
 
 /* STYLE CADASTRO */
 
@@ -58,6 +37,7 @@ li:hover {
     width: 100%;
     height: 100vh;
     object-fit: cover;
+    /* opacity: 0.8; */
     /* margin-top: 80px;  */
     /* position: absolute; */
 
@@ -76,8 +56,11 @@ li:hover {
     padding: 20px; 
     color: #000000;
     font-weight: 800;
-    background: rgba(0, 0, 0, 0.8); 
+    background: rgba(0, 0, 0, 0.7); 
+    /* background-color: #232c34; */
+    /* background-color: rgba(255, 255, 255, 0.5); */
     border-radius: 20px; 
+    
     width: 250px;
    
     
@@ -102,7 +85,7 @@ input {
 
 .cadastro .container h2 { 
     text-align: center;
-    color: aliceblue;
+    color: #b23a48;
 }
 
 
