--- a/Site/login.css
+++ b/Site/login.css
@@ -48,7 +48,7 @@ body {
     display: flex;
     flex-direction: column; 
     align-items: center;
-    justify-content: center;
+   
     position: absolute;
     top: 50%;
     left: 50%;
@@ -61,6 +61,7 @@ body {
     /* background-color: rgba(255, 255, 255, 0.5); */
     border-radius: 20px; 
     width: 250px;
+    align-content: center;
    
     
 }
