--- a/Site/cadastro.css
+++ b/Site/cadastro.css
@@ -12,9 +12,9 @@ body {
     align-items: center;
     top: 0;
     width: 100%;
-    height: 80px;
+    height: 90px;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column-reverse;
     align-items: center;
     /* background-color: #000000; */
 }
@@ -24,7 +24,6 @@ body {
 .header img {
     height: 160px;
     margin-top: 3%;
-   
     
 }
 
@@ -63,6 +62,8 @@ body {
     width: 350px;
     /* align-content: center;     */
     align-self: center;
+    margin-top: 3%;
+    margin-bottom: 3%;
    
 
 }
@@ -101,14 +102,17 @@ input {
     font-weight: 700;
     font-size: large;
     font-family: 'Times New Roman', Times, serif;
-    border-color: aliceblue;
+    border: none;
+    background-color: #b23a48;
+    color:beige ;
+    transition: all 0.3s;
    
 }
 
 button:hover {
-    background-color: #b23a48;
-    color: antiquewhite;
+    transform: scale(1.1);
 }
+
 
 
 
