--- a/Site/cadastro.css
+++ b/Site/cadastro.css
@@ -58,7 +58,7 @@ body {
     /* background-color: #232c34; */
     /* background-color: rgba(255, 255, 255, 0.5); */
     border-radius: 30px; 
-    height: 580px;
+    height: 590px;
     width: 350px;
     /* align-content: center;     */
     align-self: center;
@@ -82,14 +82,17 @@ body {
 
 input {
     border-radius: 25px;
-    height: 23px;
+    height: 30px;
     text-align: center;
     margin-bottom: 10%;
+    border: none;
 }
 
 .cadastro .container h2 { 
     text-align: center;
     color: #b23a48;
+    margin: 0;
+    margin-bottom: 5%;
 }
 
 
