--- a/Site/GymLife.css
+++ b/Site/GymLife.css
@@ -1,8 +1,13 @@
+html {
+    scroll-behavior: smooth;
+  }
+
 
 body {
     margin: 0;
     background-color: #000000;
 
+   
     /* overflow-x: hidden; */
     /* overflow-y: hidden; */
 
@@ -23,7 +28,6 @@ body {
     
 }
 
-
 /* LOGO */
 .header img {
     height: 145px;
@@ -38,7 +42,6 @@ body {
     justify-content: space-evenly;
     color: #d4c8c8;
     font-size: medium;
-   
 
 }
 
@@ -55,9 +58,7 @@ li:hover {
     transition: all 0.3s;
 }
 
-
 /* BANNER */
-
 .banner img {
     height: 650px;
     width: 100%;
@@ -69,7 +70,6 @@ li:hover {
 }
 
 .banner .text {
-    
     /* position: relative; */
     position: absolute;
     justify-content: center;
@@ -77,7 +77,6 @@ li:hover {
     /* z-index: 5; */
     bottom: 380px; 
     display: flex;
-    
 }
 
 .banner .text h1 {
@@ -98,6 +97,37 @@ p {
     color: aliceblue;
     text-align: center;
 }
+
+/* SEÇÃO BEM ESTAR */
+
+.bemEstar {
+    font-size: xx-large;
+    font-family: 'Times New Roman', Times, serif        ;
+}
+
+.bemEstar .cards p {
+    font-size: x-large;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+/* .bemEstar .cards {
+    display: flex;
+    border: solid;
+    border-radius: 10px;
+    background-color: #b23a48;
+    flex-direction: column-reverse;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
+.cards:hover {
+    transition: all 0.3s;
+    transform: scale(1.1);
+   
+} */
+
 
 
 
