--- a/GymLife.css
+++ b/GymLife.css
@@ -2,12 +2,13 @@
 
 html {
     scroll-behavior: smooth;
-  }
+  } 
 
 
 body {
     margin: 0;
     background-color: #080808;
+    overflow-x: hidden;
 }
 
 /* HEADER */
@@ -136,7 +137,7 @@ p {
     flex-direction: row;
     overflow-y: hidden;
     justify-content: space-between;
-    margin-top: 5%
+    margin-bottom: 5%;
 }
 
 .container .cards {
@@ -183,7 +184,7 @@ p {
     width: 80%;
     padding: 15px;
     margin-bottom: 10%;
-    background-color: #8c2733;
+    background-color: #f2e9e4;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     border-radius: 15px;
     transition: opacity 0.5s ease, visibility 0.5s ease;
@@ -194,14 +195,13 @@ p {
     overflow-y: hidden;
 }
 
-.conteudo p {
+.conteudo span {
     margin: 0;
-    color: beige;
+    color: rgb(29, 29, 27);
     font-size: small;
     font-weight: 600;
     font-family: Georgia, 'Times New Roman', Times, serif;
     text-align: center;
-    
 }
 /* FIM SEÇÃO BEM ESTAR */
 
@@ -223,7 +223,7 @@ p {
     
 }
 
-.dicas .text {
+.dicas .title {
     
     position: relative;
     justify-content: center;
@@ -232,7 +232,7 @@ p {
     display: flex;  
 }
 
-.dicas .text h1 {
+.dicas .title h1 {
     
     color: beige;
     font-family: 'Times New Roman', Times, serif;
@@ -241,7 +241,58 @@ p {
     
 }
 
-.text h1 {
+.title h1 {
     position: absolute;
     top: 50%;
+    
 }
+
+.subTitulo {
+    border: solid;
+    border-radius: 10px;
+    background-color: #282828;
+    border: none; 
+    flex-direction: column-reverse;
+    width: 95%;
+    margin-left: auto;
+    margin-right: auto;
+    /* margin-bottom: 10px; */
+    margin-top: 30px;
+    justify-content: space-between;
+}   
+
+.subTitulo p {
+    
+    color: beige;
+    font-weight: 500;
+    font-size: x-large;
+    text-align: center;
+    
+}
+
+.topicos {
+   
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;  
+}
+
+.topicos span {
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    justify-content: center;
+    display: block;
+    margin-bottom: 15px;
+    text-align: center;
+    font-size: larger;
+    margin-bottom: 15px;
+    color: beige;
+}
+
+.topicos h1 {
+    color: #b23a48;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+}
+
