--- a/public/css/GymLife.css
+++ b/public/css/GymLife.css
@@ -7,7 +7,8 @@ html {
 
 body {
     margin: 0;
-    background-color: #080808;
+    /*   */
+    background-color: #000000;
     overflow-x: hidden;
 }
 
@@ -111,7 +112,7 @@ p {
 
     color: beige;
     font-family: 'Times New Roman', Times, serif;
-    background: rgba(0, 0, 0, 0.5); 
+    /* background: rgba(0, 0, 0, 0.5);  */
     padding: 10px;
     top: 50%;
     justify-content: center;
@@ -250,7 +251,7 @@ p {
 .subTitulo {
     border: solid;
     border-radius: 10px;
-    background-color: #282828;
+    /* background-color: #282828; */
     border: none; 
     flex-direction: column-reverse;
     width: 95%;
@@ -282,7 +283,6 @@ p {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     justify-content: center;
-    display: block;
     margin-bottom: 15px;
     text-align: center;
     font-size: larger;
