--- a/public/css/GymLife.css
+++ b/public/css/GymLife.css
@@ -1,4 +1,4 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,900&display=swap'); */
+/* @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap'); */
 
 html {
     scroll-behavior: smooth;
@@ -10,6 +10,7 @@ body {
     /*   */
     background-color: #000000;
     overflow-x: hidden;
+    
 }
 
 /* HEADER */
@@ -262,33 +263,25 @@ p {
     justify-content: space-between;
 }   
 
-.subTitulo p {
+.subTitulo h2 {
     
     color: beige;
     font-weight: 500;
     font-size: x-large;
     text-align: center;
+    font-family: 'Times New Roman', Times, serif;
+    text-transform: uppercase;
     
 }
 
 .topicos {
    
-    margin: 0;
     display: flex;
+    margin: 0;
     flex-direction: column;
     align-items: center;  
 }
 
-.topicos span {
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
-    justify-content: center;
-    margin-bottom: 15px;
-    text-align: center;
-    font-size: larger;
-    margin-bottom: 15px;
-    color: beige;
-}
 
 .topicos h1 {
     color: #b23a48;
@@ -296,3 +289,76 @@ p {
     text-transform: uppercase;
 }
 
+
+/* IMAGENS E TEXTOS  */
+.textos {
+    display: flex;
+    align-items: center;
+}
+
+.topicos span {
+
+    /* font-size: 1.875rem;
+    line-height: 2.375rem; */
+    line-height: 2.375rem;
+    font-size: x-large;
+    font-weight: 500;
+    font-style: normal;
+    color: beige;
+    margin-right: 20px;
+   
+}
+
+.imgDireita img {
+    margin-top: 5%;
+    margin-right: 20px; 
+    width: 400px; 
+    height: 340px;
+    border-radius: 20px;
+}
+
+
+/* imagem  à esquerda */
+.topicosEsquerda h1 {
+
+    color: #b23a48;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.topicosEsquerda .textos {
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+}
+
+.topicosEsquerda span {
+
+    /* font-size: 1.875rem;
+    line-height: 2.375rem; */
+    line-height: 2.375rem;
+    font-size: x-large;
+    font-weight: 500;
+    font-style: normal;
+    color: beige;
+    margin-left: 20px;
+   
+}
+
+.imgEsquerda img {
+    
+    margin-top: 5%;
+    margin-left: 20px; 
+    width: 400px; 
+    height: 340px;
+    border-radius: 20px;
+}
+
+/* .imgEsquerda img:hover {
+   
+        transition: all 0.5s;
+        transform: scale(1.1);
+        cursor: pointer;
+    
+} */
