--- a/public/css/GymLife.css
+++ b/public/css/GymLife.css
@@ -1,8 +1,22 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap'); */
+
 
 html {
     scroll-behavior: smooth;
   } 
+
+  html::-webkit-scrollbar {
+    width: 3px;
+    height: 3px; /* A altura só é vista quando a rolagem é horizontal */
+  }
+
+  html::-webkit-scrollbar-track {
+    background: transparent;
+    padding: 2px;
+  }
+
+  html::-webkit-scrollbar-thumb {
+    background-color: #b23a48;
+  }
 
 
 body {
