finalização calculadora imc

--- a/public/css/quiz.css
+++ b/public/css/quiz.css
@@ -215,9 +215,11 @@
 .calculadora p {
     color: beige;
     font-weight: 600;
+    font-size: larger;
     justify-content: center;
     margin: 0;
     text-align: center;
+    
 }
 
 .botaoIMC {
