js do quiz; css quiz, ajuste calculadora

--- a/public/css/GymLife.css
+++ b/public/css/GymLife.css
@@ -6,7 +6,7 @@ html {
 
   html::-webkit-scrollbar {
     width: 3px;
-    height: 3px; /* A altura só é vista quando a rolagem é horizontal */
+    height: 3px; 
   }
 
   html::-webkit-scrollbar-track {
